# barnehager_i_oslo

./: .gitignore  README.md  analyse.html  analyse.ipynb  analyse_2025.html  analyse_2025.ipynb  barnehage_id.py  dashboard.py  forklaring_dashbord.md  geo_func.py  geo_func_dokumentasjon.ipynb  hent_koordinater.py  index.html  pyproject.toml  rense_data.py  requirements.txt
data/: barnehage_koordinater.parquet  barnehager_renset.parquet  foreldreundersokelse_geo.parquet
