[project]
name = "barnehager-gamle-oslo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2025.12.0",
    "folium",
    "geopy",
    "ipykernel",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "jupyterlab",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "rapidfuzz>=3.14.3",
    "scipy",
    "seaborn",
    "streamlit>=1.55.0",
    "streamlit-folium>=0.27.1",
]
